--- a/index.html
+++ b/index.html
@@ -2,43 +2,41 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
     <title>Javascript</title>
 </head>
 
 <body>
-
     <h1 id="test"></h1>
 
-    <br>
-    <br>
-    <br>
+    <br />
+    <br />
+    <br />
 
     <h1 id="sentence">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vitae tellus non nisi molestie tristique.
     </h1>
 
-    <br>
-    <br>
-    <br>
-    <br>
+    <br />
+    <br />
+    <br />
+    <br />
 
-    <h1 id="x">
-    </h1>
+    <h1 id="x"></h1>
 
-    <input type="number" id="a" placeholder="Wpisz wartość a">
-    <br>
+    <input type="number" id="a" placeholder="Wpisz wartość a" />
+    <br />
     <select id="operator">
-        <option value="+">add</option>
-        <option value="-">substract</option>
-        <option value="/">divide</option>
-        <option value="*">multiply</option>
-    </select>
-    <br>
-    <input type="number" id="b" placeholder="Wpisz wartość b">
+		<option value="+">add</option>
+		<option value="-">substract</option>
+		<option value="/">divide</option>
+		<option value="*">multiply</option>
+	</select>
+    <br />
+    <input type="number" id="b" placeholder="Wpisz wartość b" />
     <button onclick="Calculate()">Result</button>
 
     <!-- <button onclick="Addition()">Add</button>
@@ -46,11 +44,11 @@
     <button onclick="Divide()">Divide</button>
     <button onclick="Multiplication()">Multiply</button> -->
     <h1 id="result"></h1>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
 
     <h1 id="hoisting"></h1>
 
@@ -64,9 +62,9 @@
         </tr>
     </table>
 
-    <br>
-    <br>
-    <br>
+    <br />
+    <br />
+    <br />
 
     <!-- modal window -->
 
@@ -81,6 +79,14 @@
     </div>
 
     <div id="array"></div>
+
+    <button id="fetch">Fetch!</button>
+
+    <div id="name"></div>
+    <div id="mass"></div>
+    <div id="height"></div>
+    <div id="gender"></div>
+
 
     <script src="main2.js"></script>
 </body>
